// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLoadingChart is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiLoadingChart testClass1 testClass2 euiLoadingChart--medium css-1ho1qj7-euiLoadingChart-m"
  data-test-subj="test subject string"
>
  <span
    class="euiLoadingChart__bar css-1th8mu7-euiLoadingChart__bar-m-euiCanAnimate"
  />
  <span
    class="euiLoadingChart__bar css-1h0t0ot-euiLoadingChart__bar-m-euiCanAnimate"
  />
  <span
    class="euiLoadingChart__bar css-uodvp1-euiLoadingChart__bar-m-euiCanAnimate"
  />
  <span
    class="euiLoadingChart__bar css-tt9vi3-euiLoadingChart__bar-m-euiCanAnimate"
  />
</span>
`;

exports[`EuiLoadingChart mono is rendered 1`] = `
<span
  class="euiLoadingChart euiLoadingChart--mono euiLoadingChart--medium css-1ho1qj7-euiLoadingChart-m"
>
  <span
    class="euiLoadingChart__bar css-1rjdlrm-euiLoadingChart__bar-m-euiCanAnimate"
  />
  <span
    class="euiLoadingChart__bar css-1psa3pr-euiLoadingChart__bar-m-euiCanAnimate"
  />
  <span
    class="euiLoadingChart__bar css-ii216z-euiLoadingChart__bar-m-euiCanAnimate"
  />
  <span
    class="euiLoadingChart__bar css-eldpjp-euiLoadingChart__bar-m-euiCanAnimate"
  />
</span>
`;

exports[`EuiLoadingChart size l is rendered 1`] = `
<span
  class="euiLoadingChart euiLoadingChart--large css-1xdgh7e-euiLoadingChart-l"
>
  <span
    class="euiLoadingChart__bar css-17mln21-euiLoadingChart__bar-l-euiCanAnimate"
  />
  <span
    class="euiLoadingChart__bar css-owe0jo-euiLoadingChart__bar-l-euiCanAnimate"
  />
  <span
    class="euiLoadingChart__bar css-15sf8ua-euiLoadingChart__bar-l-euiCanAnimate"
  />
  <span
    class="euiLoadingChart__bar css-10zon6n-euiLoadingChart__bar-l-euiCanAnimate"
  />
</span>
`;

exports[`EuiLoadingChart size m is rendered 1`] = `
<span
  class="euiLoadingChart euiLoadingChart--medium css-1ho1qj7-euiLoadingChart-m"
>
  <span
    class="euiLoadingChart__bar css-1th8mu7-euiLoadingChart__bar-m-euiCanAnimate"
  />
  <span
    class="euiLoadingChart__bar css-1h0t0ot-euiLoadingChart__bar-m-euiCanAnimate"
  />
  <span
    class="euiLoadingChart__bar css-uodvp1-euiLoadingChart__bar-m-euiCanAnimate"
  />
  <span
    class="euiLoadingChart__bar css-tt9vi3-euiLoadingChart__bar-m-euiCanAnimate"
  />
</span>
`;

exports[`EuiLoadingChart size xl is rendered 1`] = `
<span
  class="euiLoadingChart euiLoadingChart--xLarge css-wh2pju-euiLoadingChart-xl"
>
  <span
    class="euiLoadingChart__bar css-10nwhuu-euiLoadingChart__bar-xl-euiCanAnimate"
  />
  <span
    class="euiLoadingChart__bar css-191l3dt-euiLoadingChart__bar-xl-euiCanAnimate"
  />
  <span
    class="euiLoadingChart__bar css-riztfw-euiLoadingChart__bar-xl-euiCanAnimate"
  />
  <span
    class="euiLoadingChart__bar css-fvdwz7-euiLoadingChart__bar-xl-euiCanAnimate"
  />
</span>
`;
